Fixed scrollbar appearing on admin menu list.

--- a/client/src/assets/index.css
+++ b/client/src/assets/index.css
@@ -804,7 +804,6 @@ a:hover {
   display: flex;
   padding: 20px 0;
   width: 300px;
-  overflow: scroll;
 }
 
 .admin-main-menu li a.active {
